api and details working

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #222;
+  background-color: #124449;
   height: 50px;
   padding: 20px;
-  color: white;
+  color: #20dbd8;
 }
