--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -6,7 +6,15 @@
   background-color: black;
   border-radius: 5px;
   border-color: black;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
 }
+
+.movie-card:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s;
+  box-shadow: #20dbd8 0px 5px 15px;
+}
+
 
 .movie-card img {
   width: 100%;
@@ -16,10 +24,3 @@
   border-color: black;
 }
 
-.movie-card-title {
-  font-size: 1.0em;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
-
-}
