--- a/src/components/MovieCardDetails.css
+++ b/src/components/MovieCardDetails.css
@@ -1,12 +1,38 @@
-.movie-card-details {
+.container {  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0px 0px;
+  padding: 20px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "details-poster details-movie details-movie"
+    "details-poster details-movie details-movie"
+    "details-poster details-movie details-movie"
+    "details-trailer details-trailer details-trailer"
+    "details-trailer details-trailer details-trailer";
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #20dbd8;
+  max-height: 85vh;
+}
+
+.details-poster img {
+  grid-area: details-poster; 
+  border-radius: 5px;
+  box-shadow: #20dbd8 0px 5px 15px;
+}
+
+.details-movie { 
+  grid-area: details-movie;
+  padding: 20px;
+  max-width: 80vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  text-shadow: #20dbd8 0px 5px 15px;
 }
+
+.details-trailer { grid-area: details-trailer; }
+
+
