--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   border-color: black;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+  height: auto;
 }
 
 .movie-card:hover {
