--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,3 @@
-
-
 Header {
   background-color: #124449;
   height: 50px;
@@ -10,7 +8,7 @@ Header {
   flex-direction: row;
   align-items: flex-start;
   align-content: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 h1 {
