--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -1,5 +1,8 @@
 .body {
 	background-color: #12282c;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .movie-list {
@@ -12,4 +15,26 @@
   background-color: #12282c;
 }
 
+input {
+	padding: 8px 16px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	border: 2px solid #20dbd8;
+	border-radius: 4px;
+	color: #20dbd8;
+	background-color: #12282c;
+	font-size: 14px;
+	font-weight: bold;
+}
 
+button {
+	padding: 4px 8px;
+	margin: 4px;
+	box-sizing: border-box;
+	border: 2px solid #20dbd8;
+	border-radius: 4px;
+	color: #20dbd8;
+	background-color: #12282c;
+	font-size: 14px;
+	font-weight: bold;
+}
