--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -37,4 +37,9 @@ button {
 	background-color: #12282c;
 	font-size: 14px;
 	font-weight: bold;
+	cursor: pointer;
+}
+
+.search-button {
+	cursor: pointer;
 }
