--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 Header {
   background-color: #124449;
-  height: 50px;
+  height: auto;
   padding: 20px;
   color: #20dbd8;
   font-family: 'Limelight', cursive;
@@ -14,7 +14,6 @@ Header {
 h1 {
   font-size: 40px;
   font-weight: bold;
-  margin: 0;
 }
 
 div {
@@ -28,4 +27,16 @@ a {
 
 a:hover {
   color: #20dbd8;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+nav a {
+  margin: 5px;
 }
