--- a/src/components/ActorList.css
+++ b/src/components/ActorList.css
@@ -43,3 +43,19 @@ button {
 .search-button {
 	cursor: pointer;
 }
+
+/* Smaller screens and tablets */
+@media only screen and (max-width: 960px) {
+  .actor-list {
+    grid-template-columns: 1fr 1fr;
+  }
+  
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  .actor-list {
+    grid-template-columns: 1fr;
+  }
+ 
+}
