--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -40,3 +40,27 @@ nav {
 nav a {
   margin: 5px;
 }
+
+/* Smaller screens and tablets */
+@media only screen and (max-width: 960px) {
+  Header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0px;
+  }
+  h1 {
+    font-size: 30px;
+    margin: 5px;
+  }
+  nav {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  
+}
