--- a/src/components/MovieActorDetails.css
+++ b/src/components/MovieActorDetails.css
@@ -2,9 +2,6 @@ body {
   text-align: center;
 }
 
-
-
-
 .actor-info {
   display: flex;
   flex-direction: column;
@@ -34,4 +31,28 @@ img {
 	margin: auto;
 	padding: 2em;
   background-color: #12282c;
+}
+
+@media only screen and (max-width: 960px) {
+  .actor-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+  }
+  .actor-info img {
+    width: 80%;
+    height: auto;
+  }
+  .movie-list-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+  }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  
 }
