--- a/src/components/MovieCardDetails.css
+++ b/src/components/MovieCardDetails.css
@@ -67,11 +67,32 @@ body {
   background-color: #12282c; 
 }
 
-/* .details-movie {
-  grid-area: details-movie;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  font-family: 'Courier New', Courier, monospace;
-} */
+@media only screen and (max-width: 960px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+  }
+  .details-poster img {
+    width: 100%;
+    height: auto;
+  }
+  .details-movie {
+    font-size: 0.8em;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+  p.over {
+    margin: 10px;
+  }
+  .details-actor {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  
+}
