--- a/src/components/YouTube.css
+++ b/src/components/YouTube.css
@@ -12,3 +12,17 @@
   width: 100%;
   position: absolute;
 }
+
+
+/* Smaller screens and tablets */
+@media only screen and (max-width: 960px) {
+  .video-responsive iframe{
+    width: 100%;
+    height: 200px;
+  }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  
+}
